# hexlet-url-shortener

./: pyproject.toml
url_shortener/url_shortener/: asgi.py  settings.py  urls.py  wsgi.py
url_shortener/urls/: forms.py  models.py  urls.py  utils.py  views.py
url_shortener/urls/migrations/: 0001_initial.py
url_shortener/urls/templates/urls/: home.html  login.html  sign_up.html  urls_list.html
url_shortener/urls/templates/urls/partials/: base.html
